# normalization

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
docs/: contributing-guide.md  steps.md
normalization/: __init__.py  __main__.py  cli.py
normalization/constants/: __init__.py  protectors.py
normalization/languages/: __init__.py
normalization/languages/base/: __init__.py  language_config.py  language_operator.py
normalization/languages/default/: __init__.py  operators.py  replacements.py
normalization/languages/dutch/: __init__.py  number_normalizer.py  operators.py  replacements.py  sentence_replacements.py
normalization/languages/english/: __init__.py  number_normalizer.py  operators.py  replacements.py  sentence_replacements.py
normalization/languages/finnish/: __init__.py  number_normalizer.py  operators.py  replacements.py
normalization/languages/french/: __init__.py  number_normalizer.py  operators.py  replacements.py  sentence_replacements.py
normalization/languages/german/: __init__.py  number_normalizer.py  operators.py  replacements.py  sentence_replacements.py
normalization/languages/italian/: __init__.py  number_normalizer.py  operators.py  replacements.py  sentence_replacements.py
normalization/languages/norwegian/: __init__.py  number_normalizer.py  operators.py  replacements.py
normalization/languages/spanish/: __init__.py  number_normalizer.py  operators.py  replacements.py
normalization/languages/swedish/: __init__.py  number_normalizer.py  operators.py  replacements.py
normalization/pipeline/: base.py  loader.py  replacer.py
normalization/presets/: gladia-3.yaml
normalization/steps/: __init__.py
normalization/steps/base/: __init__.py  protect_step.py  restore_step.py  text_step.py  word_step.py
normalization/steps/text/: __init__.py  apply_sentence_level_replacements.py  casefold_text.py  convert_comparison_operators_to_words.py  convert_decimal_periods_to_decimal_word.py  convert_degree_symbols_to_words.py  convert_digit_word_sequences_to_digits.py  convert_dots_to_words_in_technical_contexts.py  convert_oclock_to_numeric_time.py  convert_roman_numerals_to_digits.py  convert_word_based_time_patterns.py  expand_alphanumeric_codes.py  expand_contractions.py  expand_written_numbers_to_digits.py  expand_www_abbreviation.py  fix_ampm_letter_spacing.py  fix_dot_adjacent_number_words.py  fix_one_word_in_numeric_contexts.py  fix_version_number_v_prefix.py  format_time_patterns_with_ampm.py  normalize_numeric_time_formats.py  normalize_punctuation_between_number_words.py  normalize_whitespace.py  placeholders.py  protect_plus_word_before_digit_words.py  remove_acronym_periods.py  remove_diacritics.py  (+12 more)
scripts/: generate_step_docs.py
tests/e2e/: default_pipeline_test.py  normalization_test.py
(+39 files in other folders)
