[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gladia-normalization"
version = "0.1.0"
description = "Normalize speech-to-text output for fair Word Error Rate (WER) comparison"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "Gladia" },
]
keywords = ["speech-to-text", "STT", "ASR", "WER", "normalization", "transcription"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "contractions>=0.1.73",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/gladiaio/normalization"
Repository = "https://github.com/gladiaio/normalization"
"Bug Tracker" = "https://github.com/gladiaio/normalization/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["normalization"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle errors, pyflakes, isort
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
