[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gladia-normalization"
version = "0.1.0"
description = "Normalize speech-to-text output for fair Word Error Rate (WER) comparison"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Gladia", email = "support@gladia.io" }]
keywords = [
  "speech-to-text",
  "STT",
  "ASR",
  "WER",
  "normalization",
  "transcription",
  "benchmark",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Topic :: Text Processing :: Linguistic",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["contractions>=0.1.73", "pyyaml>=6.0.3"]

[project.urls]
Homepage = "https://github.com/gladiaio/normalization"
Repository = "https://github.com/gladiaio/normalization"
"Bug Tracker" = "https://github.com/gladiaio/normalization/issues"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.2"]

[tool.hatch.build.targets.wheel]
packages = ["normalization"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle errors, pyflakes, isort
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
